--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  sql:
+    init:
+      mode: always
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
@@ -12,5 +15,6 @@ spring:
     properties:
       hibernate:
         default_schema: reservation
+    defer-datasource-initialization: true
   application:
     name: commons
